# Small_projects

./: .gitignore
graphs/: contour_lines.m  fill_plot.m  fractal.m  funCircle.m  heart.m  hyp_parab.m  matrix_plot.m  merged_hw.m  pie_diagram.m  sine_60hz_0.25s.fig  sine_cosine_match.m  sine_example.m
img_mdl_transform/: cmyk2rgb.m  hsl2hsv.m  hsv2RGB.m  hsv2hsl.m  rgb2CMYK.m  rgb2HSV.m  rgb2hsl.m
img_mdl_transform/hdr/: ColorImage.hpp  ColorSystemTypes.hpp  ColoredImage.hpp
img_mdl_transform/src/: ColorSystemTypes.cpp  main.cpp
machine_drawing/: CMakeLists.txt
machine_drawing/hdr/: Triangle.hpp  bresenhamLine.hpp  clipper.hpp  line_algorithm.hpp  obj_parser.hpp  shape.hpp  transform.hpp
machine_drawing/src/: CMakeLists.txt  Triangle.cpp  bresenhamLine.cpp  clipper.cpp  clipping_task.cpp  line_algorithm.cpp  main.cpp  obj_parser.cpp  shape.cpp  transform_task.cpp
my_BLAS/: CMakeLists.txt
my_BLAS/hdr/: LUdecomp.h  LUdecomp.hpp  Power_Method.h  QRdecomp.hpp  iter_method.hpp  matrix.hpp  power_method.hpp
my_BLAS/headers/: Iteration_Method.h  LU_Decomposer.h  Matrix.h  Power_Method.h  QR_Decomposer.h
my_BLAS/include/: Matrix.h
my_BLAS/source/: CMakeLists.txt  Iteration_Method.cpp  LU_Decomposer.cpp  Matrix.cpp  Power_Method.cpp  QR_Decomposer.cpp
my_BLAS/src/: CMakeLists.txt  Power_Method.cpp  main.cpp
num_methods/12.04/: dichotomy.m  function_call.m
num_methods/13.04/: polynom_interp.m  sandals.m
num_methods/approx_hw/: ChebyshevNodes.m  LSM.m  Lagrange.m  task.m
simulink/: ModelObserver.slx  equivalent_systems.slx  init_model.slx
(+40 files in other folders)
